--- a/package.json
+++ b/package.json
@@ -4,14 +4,8 @@
   "description": "TDB Logger",
   "main": "lib/index.js",
   "types": "lib",
-  "files": [
-    "dist"
-  ],
   "scripts": {
-    "build": "tsc -p .",
-    "build:old": "rm -rf dist/ && prettier --write src/ && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc",
-    "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
+    "build": "tsc -p ."
   },
   "keywords": [
     "logger"
