--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "logger"
   ],
   "author": "The Digital Bunch",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@nestjs/common": "^10.2.4",
     "@types/cli-color": "^2.0.2",
     "@types/express": "^4.17.17",
     "@types/node": "^20.5.7",
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
+    "axios": "^1.5.0",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
