--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tdb-logger",
+  "name": "@thedigitalbunch/logger",
   "version": "1.0.0",
   "description": "TDB Logger",
   "main": "lib/index.js",
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc -p ."
   },
+  "repository": "https://github.com/digitalbunch/tdb-logger.git",
   "keywords": [
     "logger"
   ],
@@ -19,7 +20,7 @@
     "@types/uuid": "^9.0.3",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
